syntax = "proto3";

option go_package = "github.com/Galaxy-Railway/GGargantua/api/protobuf";

import "request_step.proto";

package GGargantua.v1.proto;

enum StepType {
  UNKNOWN = 0;
  REQUEST = 1;
  SCRIPT = 2;
  FOR = 3;
  IF = 4;
  SEQUENCE = 5;
}

message Step {
  StepType Type = 1;
  RequestStepType RequestStep = 2;
  ScriptStepType ScriptStep = 3;
  ForStepType ForStep = 4;
  IfStepType IfStep = 5;
  SequenceStepType SequenceStep = 6;
}

message StepResult {
  bool Success = 1;
  string Reason = 2;
  string Result = 3;
  repeated StepResult SubResult = 4;
}

service StepService {
  rpc ExecuteStep(Step) returns (StepResult);
}

message IfStepType {
  ScriptStepType ScriptStep = 1;
  Step TrueStep = 2;
  Step FalseStep = 3;
}

message ForStepType {
  int32 Times = 1;
  Step SubStep = 2;
}

message SequenceStepType {
  repeated Step SubSteps = 1;
}

message ScriptStepType {
  string Script = 1;
}

message RequestStepType {
  Request Request = 1;
}